--- a/CodeTemplater/MainForm.resx
+++ b/CodeTemplater/MainForm.resx
@@ -124,18 +124,18 @@
   <data name="tbtnRunTemplate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKASURBVDhPrZBfSJNRGMYPdOVV3pQUERgVdREYFf3BuqiQ
-        6qYwLMpQ0jLTcBCzi2lrTXM6bc6UbWRzfswv1PyzNNOWzaa2OVdDM4siK2dp2+f/lpoVT993/GR0Z9AD
-        D4fz8j6/97yH/BeZ28fl5faJIdPTMRhtHG63ctBZfShuHoG2aRgFDZ+RW+9Fds0nKKoGcJV9DxnzrluM
-        E2Kyj3KB2Z/4F0vL++fEOCFlbaO0yPbfAdNngLGnBAaPFsXufGhcKuQ5lMjukENhlyHTdoX2SkpfQYwT
-        UvqEo8WlSuhN0fcGAQZ+X6F4t8O3JAu954o9QUAJ/1mLAEFVnV/puaga5993bmoW8YXuIKDwwRdMz8yj
-        2uFDjWCnH7VOH+pcPlh4C4C0in04b9qKhu5BfBiZxil1VxBQcH8IUzygzuWnEyziuSgBcNG8G9cbT+Ok
-        YRNee/2IyXEEAaq6QUwG5tHg9qPx+YIl7F6kmXchmdmOBGMEMutjUO0ugvTeUURpV+F4TmsQoKz+iIlv
-        P9DsWZj8uIdDqnknLB4dal+U0GClWwttqxSMU41kNgo7VCHYlkuWU4C8coACrHxQCAtO5PcVwhqrBHkt
-        qbjxMAmKxrNQNl2AoT0LZ8ojseEa+UUBsoq3GOcBtpccfUFbH4fY0s2o6taC7boJxqFG2bNcHpICfbsS
-        SewhbJSHYrWMRFBAOvMGY9Nz8E/OYnhsBl5/ANH6dThStAYHC1ciMj8UcaY90NkVSDBHIUIVhmMq9jcN
-        C7ps7O+8pO8LJOt6kXjLgziNG7FqF06onIjO7qDekhWCeOYA1meuwGEli/3pjyxifGkKzyDf12YsQ1gG
-        CRdLvAj5A02Rb8pQXuIJAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ/SURBVDhPrZBfSJNRGMYPdOVV3pQUERgVdREYFf3BuqiQ
+        6qLAsChDScuWgkJo0FxrzeV02jZT5mjN+TG/UNO5NLOWaVPbnKuhLYsiK7W07cu/LTUrnr7vOBndLeiB
+        h8N5eZ/fe95D/ovMHeNSk31i2PRkDMY2DjdbOehsPpS2jELbPILixk8oaBiCou4jZDUDuMy+g5h52xOM
+        E2Kyc1xg9if+xdmV3rlgnJCK9q+0yPbfAuPVw9hbBr1Hi1J3EdQuJQodcig6pZDZxZC0XaS9WYaXCMYJ
+        MTzmaDFcCb3p5X0hgJ7fVyje7vSFZaH3TKknBCjjP2sRIKim6ws9F1Xn/PvOTc0iWeMOATT3PmN6Zh61
+        Dh/qBDv9qHf6YHH5YOUtADKr9uCsaTMaewbxfnQaJ1TdIUDx3WFM8QCLy08nWIPnogTAefNOXG06ieP6
+        DXg15EdCviMEUFoGMRmYR6Pbj6ZnC85idyPTvAMiZitSjDGQNCSg1l2C7DtHEKddgaP5rSGAvPYDJr79
+        QItnYfKjXg4Z5u2wenSof15Gg9VuLbSt2WCcKojYOGxTRmBLAVlKAdLqAQqw8UEhLDiV31cIq21ZKHyQ
+        gWv30yBrOg158znoO/JwqjIW666QXxQgrnqDcR7Q9oKjL2j3ckg0bERNjxZs93UwDhUqnhbwkHSUd8iR
+        xh7AemkkVopJDAXkMK8xNj0H/+QsRsZmMOQPIL58DQ6VrMJ+zXLEFkUiybQLOrsMKeY4xCijcFjJ/qZh
+        QReM/V3pOm9ApOtD6g0PktRuJKpcOKZ0Il7RSb0pLwLJzD6slSzDQTmLvTkPrcF4eIq+RL6vzl2CqFwS
+        HSzxIuQPPPJvv8DH2hsAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -147,18 +147,18 @@
   <data name="tbtnPasteData.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ4SURBVDhPfZPdT1JxGMddfwh40VUXXXTTdSKEUCLiCFhj
-        cZCAZWZz1NZa5EbBDs3mFKGZIlOytLnF61prbl3UWjMiX/CF1MqBTAmUC4wtv53z46j4Us/22c52nu/n
-        ec5+v1O1W24d75RHX43DuCl+nms5vjxXeGeYpgDbPGw5i51cBIXF+wT22dd6mhNV+3spnoKL7ZdHz19Z
-        CNzcWZ24h+X+evz5FUZ+2kJgn5f6pFgJtWI52PLbQ/ELXGy/WPvqhBVLATMW+iRIumuR7BUw1CDpqsGi
-        6xxmB+TM+xayCRfbLyJ4exffxg1IjlFYeK7F/MjlAyS8jZgbov4t+PnmDhZHdZj3a5AYVJDAYf4r+PH6
-        Fpk0N6wigpkBBV44dfA5muGzN2PwoR5euxkdJgnMZjNtNBppg8FA63Q6PRF8j7YjMXSpHO5vQOxJI172
-        WLC9vY2tra0jbG5uolAolLRarY0IVsJtZM3Zpw2Y9tRj0iXDaFc7aYxGo4hEInuEw2FCNpstaTSasmA5
-        eB0zTHiKCcd7pPjUdQEjnW1EkMlkCGtra3uk02lsbGyUlEplWbD06hqm3BfxtVuKL4/F+PhIAr/zBhFU
-        Tg2FQnuwAoVCURYkx82Id0tI+LNThA+O8xhytCCfzx+YWgkrkMlknGDMhFhnOTxpF+C9rRa+ByYiqJy6
-        SzAYJAKpVMoIKP67hJ+9QAbMP2tmjpJC3EthuNOCXC53ZHIqlSKsr6+X6urqbFVuPV/C/CgxdpNdXPqT
-        cLSrUCwWyRbHwRxnSSgU2rjrdLCsVusJtVp9W6VS0U1NTbRcLqeZ76WZlWlmKi0Wi2mRSEQLBIKrfwH8
-        32aL3SLJXQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ2SURBVDhPfZLbS5NhHMel/8PNi6666KKbrnO6dijnHNgc
+        MXzfbbmVmSEriGgFK8drGKI7hHkYuiwNKXciIoQuighby8OcLrdK5lRoBy+2BvntfZ+dPGQ/+MADz/P9
+        /H7v8z5VpbJTvBMOTQ0OYm2tThWP/LscrbxTNoo/wx0eN57GbtKHndW7BG7t7DhJRHaqxmWjeYpirFIO
+        TXVs+eX13fXZO4gONeDPLy9SC0YCt14blCLm6UDUffm3o5W/U4xVirOvz5qwNmPAyqAEEXsdIjYBSy0i
+        1lqsWs9gaVjO7reTSYqxShHB29v4Nq1DZIrGyjM1whMX9xEaacLyGH204OebW1idpBB2qRAaVZDAQf4r
+        +PH6Bum0PK4kgsVhBZ73UHBatHB2azH6QIORbgPu6SUwGAxMW1sbo9PpGIqiNETw3d+F0NiFQnioEYHH
+        TXgxYEQul0MmkzlEOp3myKvVajMRxLydZMylJ41YcDRgzirDZF8XOej3++Hz+cp4vV7C9vZ2XqVSFQRR
+        91UssuF5NhwckOJT3zlM9HYSwebmJiGRSJTZ2NjA1tZWvrm5uSBYe3UF8/bz+NovxZdHInx8KIGr5xoR
+        7O3q8XjKcAKFQlEQRKYNCPZLSPhzjxAfLGcxZmlHKpXa13UvnEAmkxUFU3oEegvhuW4B3pvr4LyvJ4K9
+        XUu43W4ikEqlrIDmvwu5uAekQ/iplv2VNIIjNMZ7jUgmk4c6x+NxAnsvebFYbK6ya/gSO10T4CYpYdUc
+        h6VLiWw2S6Y4gnx9fb25+Jz2l8lkOtbS0nJTqVQy7EUxcrmcYb+XYUdm2K6MSCRihEIhIxAILv0FftBm
+        RQHbQUIAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -167,19 +167,36 @@
   <data name="tbtnScriptSave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVDhPjZJZTxNRHMX7jQx0wfVb+EzYCl2AACKyaTTx
-        QY0g0WhkEZR9EUWh2HYADYpQqFgwmAIttEUoLXQFOqXb8X9vlSdCmOTkZmbu+Z1zF4lCI5TLNUKTTCuY
-        SX6F1hhTaA0phVYA/eO6VDyBK6WTuFwiIEttCFwrFRakmvHrEvYo1ELrkiOCJYeIaDwFkRQ5TiJ4lIA3
-        GIMvHOfvYiyJvVAcdnckJVi88eyHs/sK9Vi+hBKtS5sR3B30IBIjM00seDwH/0EcXjKEIwkODtHo2j/G
-        ujsKo8WPScs+rpYJUQJMBC0EuNO/yycxMYAnFIP/MM6TWYNdamPfjWJ9R0RtlxNfVwKQq3Up1iBmth8R
-        wM0nMRU2mOCh8SCaRJRaBQ4T2PSwdBGr2yKqOx0YmHZDrhoHAQwpk+0Qt/vccFJFpi3fMaUnePqBmMS2
-        L3Zitm5HcOv1Brqn/kBWNMYAAmZXCdC7w6srKb2o0YTipwsoIamb5qGk7+zff1W2raHD6ISscJQAdEwz
-        1jDqurdobSQa67pdqOticqKm00mJm6jq2EBlux0VbeuofGVDi84OmfJDGjC9Ek6bSWkjiSDMXP3GwSvf
-        bCcAGW+0rpFW8XxkDdKC92nA1HKQzK5/cp6kczMlV3XYubmCjOXNVpQ1/0bj0Aqk+cMMYIRgCaC208XP
-        +zwqefELj/qWkZk3BMlF2kT9YoDXFenIHnzJO1PsTmie/cT9rkVk5g4SoFjAuNlPDdKAadvnM8UAqqYf
-        uNduJkA/JFlafWp03kcAx7kbKBvmUd9qQkZOT0oiVRk3hr/vYXjGe+p6T1N9yxxqXs4iI7vHJ5GrDU/k
-        ar1OVqT3y1Wf6Hrq+A2TFX6EVDlCR/UOmflvacMGqfIApfbz5As5vaGM3N5vfwF0IhGmgWqJIAAAAABJ
-        RU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKsSURBVDhPjZJZTxNRHMX7hXygG4rxW/hoDFuhCxBARDaN
+        Jj6oESQajSyCUsIqigJt6QAaFKFQsWAwhVJoC6Ut0JXSKd2O/7lVnghhkpObmbnnd85dRHI1VyVTc61S
+        DWcmBeQaQ0Ku0WfkGg70j+lK2RSuVkwjr5xDbqk+eK2CW5KodddFwiNXcR0rjhhWHDziyQx4UuwkjdBx
+        CvuhBPyRJHvnE2kchJOwuaOZSYs3efPx3KFcNV4kkmuM1pXtGO4P+RBLkJkmFj9dQOAoiX0yRGIpBg7T
+        6Do8gc0Th9ESwLTlEHmVXJwAUyELAe4NeNkkQQLAF04gEE2yZKGBl9rYvXHY9ng0aJ34thaETDWWIYAh
+        YbYfE8DDJgkqaTbBR+NRPI04tQpGU9j2Cek81t086nocGJz1QKbUgQD6jGkzirv9HjipoqAd/wmlp1j6
+        EZ+G2584NVvdMdx5u4XemV1IS8cFAIf5dQL07bHqCkovbTGh7PkSykmq1kUo6Lvw779qOjfQbXRCWjJG
+        ADqmOWsEjb07tDYSjY29LjRqBTlR3+OkxG3Udm+hpsuO6k4bat5son3CDqniUxYwuxbJmklZI4kggrnu
+        nYNVvt1FADLe6tggrePl6AYkxR+zgJnVEJld/+Q8TWdmSq7ttjNzNRmr2qyobPuDluE1SIpGBIARnCWI
+        hh4XO++LqPzVbzzpX4W4cBiiy7SJhuUgq8vTkT36WniuhDuhfvELD7XLEBcMEaCMg84coAZZwOzml3Ml
+        AJStP/Ggy0yAAYhyNbrM2KKfAI4LN1A0L6Kpw4ScfG1GJFYat0Z+HGBkbv/M9Z6lpvYF1L+eR84NrV8k
+        U00+k6kME1KFISBT6ul6TrAbJi35DIlilI7qA8RF72nDhqjyIKUOsORL+X3hnIK+738BDH0Re5eFLq0A
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="tbtnScriptDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJpSURBVDhPrZPtS1NhGIfP3+KKyECELChCqChyuk033Zpu
+        znlqbjNjEaYpO8M0gxJDDT+EWtNetfKLrloSmSPJlF4UtY6KunZqo9b0nM1tKb+2dWIMZxB0we/bfd0P
+        z/3cD/HfWaqoECwajeZ5vY6eK9Wyn0o17KxWTU+TRebJYoWAL0uOs7xcNm80Mt/bmhEceY7Q5DhCbxzg
+        BnqxbNLhfbGMmVBJZHx5IlF5Qa/nVh/2YmNuFmH7I4R7WhDuvIKf9zuwPmqHu9aEMWUON6Y8mthkyWBI
+        WSjTu9i7PdigpxC+fgm+FgtWmmsQvGZBqJVCsOkcgrZ7cJ4mMVpwxDUiPZzC6wSxaDBQnnoz1qcmYieu
+        tVHwXq5EoOFUQtjzJIL9t/BOkomX+ZkUrxPEQmRg/v7bCPd1wtdUhW+a/KRZrSLBNdfBbanGi7z9NK8T
+        xMcyMhB62o9wmwW+iyZshVspgtdYjJXOdgyJMgK8ThCzpCaw1mdFsNGEwAU9X76ZaAOPToWVjnbYxenx
+        BjMlhbS3qQ5rLRTYs+pYYdIUSeCrr8VybSXswrT4FaY0CoqWZyPQ1w3fCTm8OukmmTmeA6ZQCn/PDThy
+        M/BEmBof4getNOWtRuZylmvhf2CNDcyjyv0tKsVg5BFZnguuuwvTJfmwZaW6BrK3x58xyoQyR/ZakcUt
+        nlTBf8eKH40U3GQRvqiV8DaYwd3swow6D4PCndxg1o7k2zga2bBXBYeYcekBfK2phLf1aiyfq89gWLQ7
+        Iu9itpT/4FAcFAxL9pmH8vbSzyR7WLswnbWJ0+jH2alm27Ftf/9M/w5B/AJuWtMZg/ylmQAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <metadata name="toolStrip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -188,18 +205,18 @@
   <data name="tbtnCopyResult.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKRSURBVDhPfZLLTxNRFMZZqvG/ceMOgxRfCQmtLW6MCxMX
-        akyIJaFRDNgqbLHKChO3sjFRNloigbbTdvqghSIp0x5J26EvSjszTLHzOp4Z6qrgl3y5iznzu+d89wyM
-        eCLLTl8iNT6XANd8jHPNs9z4XIwb9bLpa1PhZ4MP1i4M/E93fWxa13WuJqlQJ1dFFUpNBXhRgblAHRy+
-        zaUrj75e6pX3y/U2vteQNAjnVQiDChv5LqxsSyB1NQgVFfCvNeDGdHCmV94vhy/GtY81SBRVSJRUYAoK
-        rOZkyNckaEgKSH9UePghme+V98sECLIGW/RzhmyCQtTFx2AdF9cO8F2gbPnpp4z8ZCnduf8+vjfkCb26
-        OvH5ogWwE0CUdcjymmUTwoICiz95NBCxJulYJ1dFDUstBSuigvOBOjp9qW+Dj5cvD4x5aQQLYFqFbFmF
-        FEH8dGtTNjAMGkb2VaRscGVbRqlrIGWD/vVDvPliw28BBALkajpw9dNzh2Bm2+2OgcmihsmShtHfCq7m
-        TrBQk5GyQcoGHbNRgwAsd0jPdxZAODFwi9cwU9aQssFQoYuB3Q5+yUhYpnHuvWEJMJMEXmj2ARYIIJ4g
-        7lQMyxleR3ZfwRB0rU4qoo7jJmD0ZWS7YS6QQMvTVqAm0ELRMi38oBEsAOKvio7ZAx3T1Em8ZOahYFUy
-        0OUjwG0P8/2OJ5qyuZnC8HMm+892H0sjIOZqiFz99Nwl2BaPGC+i9c3pjRnWU54luzehHsnquYBWR0Xn
-        LHVwnhyvN7EitM4FVMUWumZT2Cvv162pSPNQ0pCywUpbQcoGKRvLDfLRsY72mWi3V96voYng+vVJ5sA2
-        yRg2d0SyuaNk84xII5PM8bA7WB2bZoW/IaWjwOcPww4AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ7SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JUTAFjfGxIWJ
+        xpgQS0KDykcbYYtVNkriVjYmykaLEqDtlLaUFlBSWp6kQ2lnCrSdocXOTOd431DYFDzJyVvMfb+597zb
+        0uESpu2eaKx3LMoc40sp7t6xpVSnOxy/NhB41vpg7kLL/3TXE47rup6SVJ3J5LyiM7GgMVHR2JhPZj2e
+        lQ9XHn251ChvluN1ZLNAFwPpYy+ka2xmTWVqTWf+jMa8Pwrs+svF4UZ5s7rcS6kSAaIZssghGptNqiwt
+        qaygakz9q7OH75bTjfJmcUCZAKt0OUHmID91MbUoY3JuF298O5affkxUHr+PV++/jWy2ufyvrvZ9ungK
+        UAiwTpe5OSRMXUz+zMIEIKl1yOS8YkAsasgpGsZ9Muye2NfWJ9OXT0c4AXDzUbz01/2KiQAzIGzroGww
+        s1aBWjNB2cA7v4cbgwve0xGSks5S8vHJIbztUtXEcsbAsmgg9EfDbPIIW1IFlA0oG/QMBU0LwF/hLED5
+        yMRq1kBixwBlA/9WDb6NKj4nVOzQOPfcIQIMRZlYLjQBJgigHAG/cqblRLaO8LYGP6tZneSUOno5oPOF
+        sMY7yJdpeUoak8q0ULRME99pBAsA/M7Vsb5bR5w6iYg8Dw151YRjlAC3XMFvt12hmM0Z3Gp/Hlw/cbcn
+        TCMASQlIycfnBsFWs0AkA+ubfUQwrac8S93uqH5Q0c8FFKs67EPUwXnqGV1Brlw8F5BXinCMxNAob9bN
+        AWF/TzVA2SBX0kDZgLKxXCAfHNZxZzhYa5Q3q61vcb6tP7hr6/ebNqeg2pwhMj8FtaM/cNjuXMh3DYbL
+        /wDia6MvPCpQQgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
